--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,28 +1,25 @@
+
 include(FindProtobuf)
 
 # include_directories(${PROTOBUF_INCLUDE_DIR})
 
-
 # include_directories(${PROJECT_SOURCE_DIR}/lion)
-
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER chat.proto)
 
 
-
+aux_source_directory(./server serverSrc)
 add_executable(server 
-    server.cpp 
-    ChatEvent.cpp 
-    ChatServer.cpp 
+    ${serverSrc}
     ChatMsg.cpp 
-    CommuManager.cpp
     ${PROTO_SRC})
 
+aux_source_directory(./client clientSrc)
 add_executable(client 
-    client.cpp 
+    ${clientSrc}
     ChatMsg.cpp 
     ${PROTO_SRC})
 
 target_link_libraries(server lion protobuf)
 
-target_link_libraries(client protobuf pthread)
+target_link_libraries(client lion protobuf)
